--- a/UdemyHibernateTutorial/.classpath
+++ b/UdemyHibernateTutorial/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.48-bin.jar"/>
 	<classpathentry kind="lib" path="lib/stax-ex-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/workspaceSpring/UdemyHibernateTutorial/lib/mysql-connector-java-5.1.48-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
