--- a/UdemyHibernateTutorial/.classpath
+++ b/UdemyHibernateTutorial/.classpath
@@ -22,5 +22,9 @@
 	<classpathentry kind="lib" path="lib/stax-ex-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/txw2-2.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/workspaceSpring/UdemyHibernateTutorial/lib/mysql-connector-java-5.1.48-bin.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2-api-2.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
